--- a/Frontend/src/pages/Details/details.css
+++ b/Frontend/src/pages/Details/details.css
@@ -1,5 +1,5 @@
 .detail{
-    min-height: 110vh;
+    min-height: 100vh;
     background-color: rgb(235, 240, 239);
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@
 .events-details{
     min-height: 600px;
     width: 80%;
-    /* padding: 50px; */
+    padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
